1. Added button Add category 2. The Add Category page has been created

--- a/OnlineStore_MVC/Views/Category/Index.cshtml
+++ b/OnlineStore_MVC/Views/Category/Index.cshtml
@@ -6,7 +6,7 @@
             <h2 class="text-primary">Category List</h2>
         </div>
         <div class="col-6">
-            Create New category
+            <a asp-controller="Category" asp-action="Create" class="btn btn-primary float-end">Create New category</a>
         </div>
     </div>
     <br /><br />
