Add Update and Delete operations

--- a/OnlineStore_MVC/Views/Category/Index.cshtml
+++ b/OnlineStore_MVC/Views/Category/Index.cshtml
@@ -6,7 +6,7 @@
             <h2 class="text-primary">Category List</h2>
         </div>
         <div class="col-6">
-            <a asp-controller="Category" asp-action="Create" class="btn btn-primary float-end">Create New category</a>
+            <a asp-controller="Category" asp-action="Create" class="btn btn-primary float-end">Создание новой категории</a>
         </div>
     </div>
     <br /><br />
@@ -16,10 +16,10 @@
             <thead>
                 <tr>
                     <th>
-                        Category name
+                        Имя категории
                     </th>
                     <th>
-                        Display Order
+                        Порядок отображения
                     </th>
                     <th></th>
                 </tr>
@@ -28,9 +28,14 @@
                 @foreach(var obj in Model)
                 {
                     <tr>
-                        <td width="50%">@obj.CategoryName</td>
-                        <td width="30%">@obj.DisplayOrder</td>
-                        <td></td>
+                        <td width="55%">@obj.CategoryName</td>
+                        <td width="20%">@obj.DisplayOrder</td>
+                        <td class="text-center">
+                            <div class="w-75 btn-group" role="group">
+                                <a asp-controller="Category" asp-route-Id="@obj.CategoryId" asp-action="Edit" class="btn btn-primary mx-2">Редактировать</a>
+                                <a asp-controller="Category" asp-route-Id="@obj.CategoryId" asp-action="Delete" class="btn btn-danger mx-2">Удалить</a>
+                            </div>
+                        </td>
                     </tr>
                 }
             </tbody>
