--- a/OnlineStore_MVC/Views/Category/Delete.cshtml
+++ b/OnlineStore_MVC/Views/Category/Delete.cshtml
@@ -1,10 +1,11 @@
 ﻿@model OnlineStore_MVC.Models.Category
 
-<form method="post" asp-action="Create">
+<form method="post" asp-action="Delete">
+    <input asp-for="CategoryId" hidden />
     <div class="border p-3">
-        @*<div asp-validation-summary="ModelOnly" class="text-danger"></div>*@
+       
         <div class="form-group row">
-            <h2 class="text-info p-lg-3">Add Category</h2>
+            <h2 class="text-info pl-3">Delete Category</h2>
         </div>
         <div class="row">
             <div class="col-8">
@@ -13,9 +14,9 @@
                         <label asp-for="CategoryName"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="CategoryName" class="form-control"/>
-                        <span asp-validation-for="CategoryName" class="text-danger"></span>
+                        <input asp-for="CategoryName" disabled class="form-control" />
                     </div>
+
                 </div>
                 <br />
                 <div class="form-group row">
@@ -23,8 +24,7 @@
                         <label asp-for="DisplayOrder"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="DisplayOrder" class="form-control" />
-                        <span asp-validation-for="DisplayOrder" class="text-danger"></span>
+                        <input asp-for="DisplayOrder" disabled class="form-control" />
                     </div>
 
                 </div>
@@ -33,10 +33,10 @@
                     <div class="col-8 offset-4 row">
 
                         <div class="col">
-                            <input type="submit" class="btn btn-info w-100" value="Create"/>
+                            <input type="submit" class="btn btn-danger w-100" value="Удалениe"/>
                         </div>
                         <div class="col">
-                            <a asp-action="Index" class="btn btn-success w-100">Back</a>
+                            <a asp-action="Index" class="btn btn-success w-100"><i class="fas fa-sign-out-alt"></i> Назад</a>
                         </div>
                     </div>
                 </div>
@@ -46,8 +46,13 @@
             </div>
         </div>
     </div>
+
 </form>
 
-@section Scripts {
-    @{ <partial name="_ValidationScriptsPartial" /> }
+@section Scripts{
+
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
+
 }
