--- a/OnlineStore_MVC/Views/Category/Edit.cshtml
+++ b/OnlineStore_MVC/Views/Category/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model OnlineStore_MVC.Models.Category
 
-<form method="post" asp-action="Create">
+<form method="post">
+    <input asp-for="CategoryId" hidden/>
     <div class="border p-3">
-        @*<div asp-validation-summary="ModelOnly" class="text-danger"></div>*@
         <div class="form-group row">
-            <h2 class="text-info p-lg-3">Add Category</h2>
+            <h2 class="text-info p-lg-3">Редактировать категорию</h2>
         </div>
         <div class="row">
             <div class="col-8">
@@ -13,7 +13,7 @@
                         <label asp-for="CategoryName"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="CategoryName" class="form-control"/>
+                        <input asp-for="CategoryName" class="form-control" />
                         <span asp-validation-for="CategoryName" class="text-danger"></span>
                     </div>
                 </div>
@@ -33,10 +33,10 @@
                     <div class="col-8 offset-4 row">
 
                         <div class="col">
-                            <input type="submit" class="btn btn-info w-100" value="Create"/>
+                            <input type="submit" class="btn btn-info w-100" value="Обновление" />
                         </div>
                         <div class="col">
-                            <a asp-action="Index" class="btn btn-success w-100">Back</a>
+                            <a asp-action="Index" class="btn btn-success w-100">Назад</a>
                         </div>
                     </div>
                 </div>
@@ -49,5 +49,7 @@
 </form>
 
 @section Scripts {
-    @{ <partial name="_ValidationScriptsPartial" /> }
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
 }
