--- a/OnlineStore_MVC/Views/Product/Upsert.cshtml
+++ b/OnlineStore_MVC/Views/Product/Upsert.cshtml
@@ -1,14 +1,14 @@
-﻿@model OnlineStore_MVC.Models.Product
+﻿@model OnlineStore_MVC.Models.ViewModels.ProductVM
 
 @{
     var title = "Create product";
 }
 
 <form method="post" enctype="multipart/form-data">
-    @if (Model.Id != 0)
+    @if (Model.Product.Id != 0)
     {
         title = "Edit product";
-        <input asp-for="Id" hidden />
+        <input asp-for="Product.Id" hidden />
     }
     <div class="border p-3">
         <div class="form-group row">
@@ -18,32 +18,32 @@
             <div class="col-8">
                 <div class="form-group row">
                     <div class="col-4">
-                        <label asp-for="Name"></label>
+                        <label asp-for="Product.Name"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="Name" class="form-control" />
-                        <span asp-validation-for="Name" class="text-danger"></span>
+                        <input asp-for="Product.Name" class="form-control" />
+                        <span asp-validation-for="Product.Name" class="text-danger"></span>
                     </div>
                 </div>
                 <br />
                 <div class="form-group row">
                     <div class="col-4">
-                        <label asp-for="Price"></label>
+                        <label asp-for="Product.Price"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="Price" class="form-control" />
-                        <span asp-validation-for="Price" class="text-danger"></span>
+                        <input asp-for="Product.Price" class="form-control" />
+                        <span asp-validation-for="Product.Price" class="text-danger"></span>
                     </div>
 
                 </div>
                 <br />
                 <div class="form-group row">
                     <div class="col-4">
-                        <label asp-for="Description"></label>
+                        <label asp-for="Product.Description"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="Description" class="form-control" />
-                        <span asp-validation-for="Description" class="text-danger"></span>
+                        <input asp-for="Product.Description" class="form-control" />
+                        <span asp-validation-for="Product.Description" class="text-danger"></span>
                     </div>
 
                 </div>
@@ -60,13 +60,13 @@
                 <br />
                 <div class="form-group row">
                     <div class="col-4">
-                        <label asp-for="CategoryId"></label>
+                        <label asp-for="Product.CategoryId"></label>
                     </div>
                     <div class="col-8">
-                        <select asp-for="CategoryId" asp-items="@ViewBag.CategoryDropDown" class="form-control">
+                        <select asp-for="Product.CategoryId" asp-items="@Model.CategorySelectList" class="form-control">
                             <option disabled selected>--Select Category--</option>
                         </select>
-                        <span asp-validation-for="CategoryId" class="text-danger"></span>
+                        <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
                     </div>
 
                 </div>
@@ -74,7 +74,7 @@
                 <div class="form-group row">
                     <div class="col-8 offset-4 row">
                         <div class="col">
-                            @if (Model.Id != 0)
+                            @if (Model.Product.Id != 0)
                             {
                                 // update
                                 <input type="submit" class="btn btn-info w-100" value="Обновление" />
