--- a/OnlineStore_MVC/Views/Product/Upsert.cshtml
+++ b/OnlineStore_MVC/Views/Product/Upsert.cshtml
@@ -102,6 +102,19 @@
 
 @section Scripts {
     @{
-        <partial name="_ValidationScriptsPartial" />
+                <partial name="_ValidationScriptsPartial" />
     }
+    <script>
+        function validateInput() {
+            if (document.getElementById("uploadBox").value == "") {
+                Swal.fire({
+                    title: "Ошибка",
+                    text: "Загрузите изображение!",
+                    icon: "error"
+                })
+                return false;
+            }
+            return true;
+        }
+    </script>
 }
