--- a/OnlineStore_MVC/Views/Product/Upsert.cshtml
+++ b/OnlineStore_MVC/Views/Product/Upsert.cshtml
@@ -1,18 +1,19 @@
 ﻿@model OnlineStore_MVC.Models.ViewModels.ProductVM
 
 @{
-    var title = "Create product";
+    var title = "Create Product";
 }
 
 <form method="post" enctype="multipart/form-data">
     @if (Model.Product.Id != 0)
     {
-        title = "Edit product";
+        title = "Edit Product";
         <input asp-for="Product.Id" hidden />
     }
     <div class="border p-3">
+
         <div class="form-group row">
-            <h2 class="text-info p-lg-3">@title</h2>
+            <h2 class="text-info pl-3">@title</h2>
         </div>
         <div class="row">
             <div class="col-8">
@@ -24,8 +25,8 @@
                         <input asp-for="Product.Name" class="form-control" />
                         <span asp-validation-for="Product.Name" class="text-danger"></span>
                     </div>
+
                 </div>
-                <br />
                 <div class="form-group row">
                     <div class="col-4">
                         <label asp-for="Product.Price"></label>
@@ -36,7 +37,16 @@
                     </div>
 
                 </div>
-                <br />
+                @*<div class="form-group row">
+                    <div class="col-4">
+                        <label asp-for="Product.ShortDesc"></label>
+                    </div>
+                    <div class="col-8">
+                        <input asp-for="Product.ShortDesc" class="form-control" />
+                        <span asp-validation-for="Product.ShortDesc" class="text-danger"></span>
+                    </div>
+
+                </div>*@
                 <div class="form-group row">
                     <div class="col-4">
                         <label asp-for="Product.Description"></label>
@@ -47,7 +57,6 @@
                     </div>
 
                 </div>
-                <br />
                 <div class="form-group row">
                     <div class="col-4">
                         Image
@@ -57,7 +66,6 @@
                     </div>
 
                 </div>
-                <br />
                 <div class="form-group row">
                     <div class="col-4">
                         <label asp-for="Product.CategoryId"></label>
@@ -70,53 +78,70 @@
                     </div>
 
                 </div>
-                <br />
+                @*<div class="form-group row">
+                    <div class="col-4">
+                        <label asp-for="Product.ApplicationTypeId"></label>
+                    </div>
+                    <div class="col-8">
+                        <select asp-for="Product.ApplicationTypeId" asp-items="@Model.ApplicationTypeSelectList" class="form-control">
+                            <option disabled selected>--Select Application Type--</option>
+                        </select>
+                        <span asp-validation-for="Product.ApplicationTypeId" class="text-danger"></span>
+                    </div>
+
+                </div>*@
                 <div class="form-group row">
                     <div class="col-8 offset-4 row">
+
                         <div class="col">
                             @if (Model.Product.Id != 0)
                             {
-                                // update
-                                <input type="submit" class="btn btn-info w-100" value="Обновление" />
+                            //update
+                                <input type="submit" class="btn btn-info w-100" value="Update" />
                             }
                             else
                             {
-                                // create
-                                <input type="submit" onclick="return validateInput()" class="btn btn-primary w-100" value="Создание" />
+                //create
+                                <input type="submit" onclick="return validateInput()" class="btn btn-primary w-100" value="Create" />
                             }
+
                         </div>
                         <div class="col">
-                            <a asp-action="Index" class="btn btn-success w-100">
-                                <i class="fa-solid fa-right-from-bracket"></i> Назад
-                            </a>
+                            <a asp-action="Index" class="btn btn-success w-100"><i class="fas fa-sign-out-alt"></i> Back</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-4 ">
                 @* Keep this empty *@
+                @if (Model.Product.Id != 0)
+                {
+                    <img src="@WC.ImagePath@Model.Product.ImageURL" width="100%" style="border-radius:5px; border:1px solid #bbb" />
+                }
             </div>
         </div>
     </div>
+
 </form>
 
 @section Scripts {
+
     @{
-                <partial name="_ValidationScriptsPartial" />
+        <partial name="_ValidationScriptsPartial" />
     }
     <script>
         $(document).ready(function () {
             $('.summernote').summernote({
-                innerHeight:250
+                height: 250
             });
         });
         function validateInput() {
             if (document.getElementById("uploadBox").value == "") {
-                Swal.fire({
-                    title: "Ошибка",
-                    text: "Загрузите изображение!",
-                    icon: "error"
-                })
+                Swal.fire(
+                    'Error!',
+                    'Please upload an Image!',
+                    'error'
+                )
                 return false;
             }
             return true;
