1. Add Application Type in Product Model, Controller and View 2. Optimization Product Controller (Eager loading) 3. Add ShortDescription in Product Model and View (Upsert and Delete)

--- a/OnlineStore_MVC/Views/Product/Delete.cshtml
+++ b/OnlineStore_MVC/Views/Product/Delete.cshtml
@@ -20,6 +20,7 @@
                     </div>
 
                 </div>
+                <br />
                 <div class="form-group row">
                     <div class="col-4">
                         <label asp-for="Price"></label>
@@ -27,18 +28,17 @@
                     <div class="col-8">
                         <input asp-for="Price" disabled class="form-control" />
                     </div>
-
                 </div>
-                @*<div class="form-group row">
-                <div class="col-4">
-                <label asp-for="Product.ShortDesc"></label>
+                <br />
+                <div class="form-group row">
+                    <div class="col-4">
+                        <label asp-for="ShortDescription"></label>
+                    </div>
+                    <div class="col-8">
+                        <input asp-for="ShortDescription" disabled class="form-control" />
+                    </div>
                 </div>
-                <div class="col-8">
-                <input asp-for="Product.ShortDesc" class="form-control" />
-                <span asp-validation-for="Product.ShortDesc" class="text-danger"></span>
-                </div>
-
-                </div>*@
+                <br />
                 <div class="form-group row">
                     <div class="col-4">
                         <label asp-for="Description"></label>
@@ -46,9 +46,8 @@
                     <div class="col-8">
                         <textarea asp-for="Description" disabled class="form-control summernote"></textarea>
                     </div>
-
                 </div>
-
+                <br />
                 <div class="form-group row">
                     <div class="col-4">
                         <label asp-for="CategoryId"></label>
@@ -56,20 +55,17 @@
                     <div class="col-8">
                         <input asp-for="Category.CategoryName" disabled class="form-control" />
                     </div>
-
                 </div>
-                @*<div class="form-group row">
-                <div class="col-4">
-                <label asp-for="Product.ApplicationTypeId"></label>
+                <br />
+                <div class="form-group row">
+                    <div class="col-4">
+                        <label asp-for="ApplicationTypeId"></label>
+                    </div>
+                    <div class="col-8">
+                        <input asp-for="ApplicationType.Name" disabled class="form-control" />
+                    </div>
                 </div>
-                <div class="col-8">
-                <select asp-for="Product.ApplicationTypeId" asp-items="@Model.ApplicationTypeSelectList" class="form-control">
-                <option disabled selected>--Select Application Type--</option>
-                </select>
-                <span asp-validation-for="Product.ApplicationTypeId" class="text-danger"></span>
-                </div>
-
-                </div>*@
+                <br />
                 <div class="form-group row">
                     <div class="col-8 offset-4 row">
 
