--- a/OnlineStore_MVC/Views/Product/Index.cshtml
+++ b/OnlineStore_MVC/Views/Product/Index.cshtml
@@ -23,6 +23,12 @@
                         <th>
                             Цена
                         </th>
+                        <th>
+                            Category
+                        </th>
+                        <th>
+                            Application Type
+                        </th>
                         <th></th>
                     </tr>
                 </thead>
@@ -30,8 +36,10 @@
                     @foreach (var obj in Model)
                     {
                         <tr>
-                            <td width="55%">@obj.Name</td>
-                            <td width="20%">@obj.Price</td>
+                            <td width="30%">@obj.Name</td>
+                            <td width="10%">@obj.Price</td>
+                            <td width="20%">@obj.Category.CategoryName</td>
+                            <td width="20%">@obj.ApplicationType.Name</td>
                             <td class="text-center">
                                 <div class="w-75 btn-group" role="group">
                                     <a asp-route-Id="@obj.Id" asp-action="Upsert" class="btn btn-primary mx-2">
