--- a/OnlineStore_MVC/Views/Product/Upsert.cshtml
+++ b/OnlineStore_MVC/Views/Product/Upsert.cshtml
@@ -27,6 +27,7 @@
                     </div>
 
                 </div>
+                <br />
                 <div class="form-group row">
                     <div class="col-4">
                         <label asp-for="Product.Price"></label>
@@ -35,18 +36,18 @@
                         <input asp-for="Product.Price" class="form-control" />
                         <span asp-validation-for="Product.Price" class="text-danger"></span>
                     </div>
-
                 </div>
-                @*<div class="form-group row">
+                <br />
+                <div class="form-group row">
                     <div class="col-4">
-                        <label asp-for="Product.ShortDesc"></label>
+                        <label asp-for="Product.ShortDescription"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="Product.ShortDesc" class="form-control" />
-                        <span asp-validation-for="Product.ShortDesc" class="text-danger"></span>
+                        <input asp-for="Product.ShortDescription" class="form-control" />
+                        <span asp-validation-for="Product.ShortDescription" class="text-danger"></span>
                     </div>
-
-                </div>*@
+                </div>
+                <br />
                 <div class="form-group row">
                     <div class="col-4">
                         <label asp-for="Product.Description"></label>
@@ -55,8 +56,8 @@
                         <textarea asp-for="Product.Description" class="form-control summernote"></textarea>
                         <span asp-validation-for="Product.Description" class="text-danger"></span>
                     </div>
-
                 </div>
+                <br />
                 <div class="form-group row">
                     <div class="col-4">
                         Image
@@ -64,8 +65,8 @@
                     <div class="col-8">
                         <input type="file" name="files" id="uploadBox" multiple class="form-control" />
                     </div>
-
                 </div>
+                <br />
                 <div class="form-group row">
                     <div class="col-4">
                         <label asp-for="Product.CategoryId"></label>
@@ -76,9 +77,9 @@
                         </select>
                         <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
                     </div>
-
                 </div>
-                @*<div class="form-group row">
+                <br />
+                <div class="form-group row">
                     <div class="col-4">
                         <label asp-for="Product.ApplicationTypeId"></label>
                     </div>
@@ -88,8 +89,8 @@
                         </select>
                         <span asp-validation-for="Product.ApplicationTypeId" class="text-danger"></span>
                     </div>
-
-                </div>*@
+                </div>
+                <br />
                 <div class="form-group row">
                     <div class="col-8 offset-4 row">
 
