--- a/OnlineStore_MVC/Views/Home/Index.cshtml
+++ b/OnlineStore_MVC/Views/Home/Index.cshtml
@@ -1,8 +1,22 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model OnlineStore_MVC.Models.ViewModels.HomeVM
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container">
+    <div class="text-center">
+        <button class="btn btn-dark filter-button" data-filter="all">All</button>
+        @foreach(var obj in Model.Categories)
+        {
+            <button class="btn btn-outline-secondary filter-button" data-filter="@obj.CategoryName.Replace(' ', '_')">
+                @obj.CategoryName
+            </button>
+        }
+    </div>
+    <br />
+    <div class="row">
+        @foreach(var prod in Model.Products)
+        {
+            <partial name="_IndividualProductCard" model="prod" />
+            //display all products
+
+        }
+    </div>
 </div>
