--- a/OnlineStore_MVC/Views/Home/Index.cshtml
+++ b/OnlineStore_MVC/Views/Home/Index.cshtml
@@ -20,3 +20,26 @@
         }
     </div>
 </div>
+
+@section Scripts {
+    <script>
+            $(document).ready(function(){
+
+            $(".filter-button").click(function(){
+
+                var value = $(this).attr('data-filter');
+                if(value == "all")
+                {
+                    $('.filter').show('1000');
+                }
+                else
+                {
+                    $(".filter").not('.'+value).hide('3000');
+                    $('.filter').filter('.'+value).show('3000');
+
+                }
+            });
+
+        });
+    </script>
+}
